--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -4,6 +4,7 @@ addons.jdgrowlnotification.menu = Growl Messages
 addons.jdlowspeed.statusmessage.disabled = Disable Low Speeddetection
 addons.jdlowspeed.statusmessage.enabled = Enable lowspeed detection
 addons.jdshutdown.menu = Shutdown after downloads finished
+addons.jdshutdown.run = Shutdown now
 addons.jdshutdown.statusmessage.disabled = The System will NOT be shut down by JDownloader
 addons.jdshutdown.statusmessage.enabled = JDownloader will shut down your System after downloads finished
 addons.schedule.menu.add = Add
@@ -19,8 +20,10 @@ addons.schedule.menu.redo = Reset in [hours]
 addons.schedule.menu.remain = Remaining: 
 addons.schedule.menu.remove = Delete
 addons.schedule.menu.running = Stopped!
+addons.schedule.menu.schedule = Schedule
 addons.schedule.menu.start = Start
 addons.schedule.menu.start_stop = Start/Stop Download
+addons.schedule.menu.status = Status
 addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Select time: 
 addons.schedule.name = Scheduler
@@ -73,6 +76,12 @@ downloadlink.status.error.temp_unavailable = Temp. unavailable
 downloadlink.status.error_unexpected = Unexpected Error
 downloadlink.status.incomplete = Incomplete
 downloadlink.status.waitinguserio = Waiting for user input
+exceptions.browserexception.alreadyexists = Outputfile already exists
+exceptions.browserexception.badrequest = Bad Request: %s(%s)
+exceptions.browserexception.chunkcopyerror.badrequest = Unexpected chunkcopy error
+exceptions.browserexception.couldnotrenam = Could not rename outputfile
+exceptions.browserexception.rangeerror = Chunkload error
+exceptions.browserexception.redirecterror = Unexpected chunkcopy error: Redirect
 gui.accountcheck.pluginerror = Plugin %s may be defect. Inform support!
 gui.askname = What's your name?
 gui.btn_add = Add
@@ -226,7 +235,6 @@ gui.config.liveheader.warning.wizard = The settings search can take a while. Ple
 gui.config.liveheader.warning.wizard.checkall = Check all routers (very slow)
 gui.config.liveheader.warning.wizard.title = Start automatic router-detection now?
 gui.config.liveheader.warning.yourrouter = You have a
-gui.config.localeditmode = Make 'Missing-Language-Entries' file
 gui.config.packagemanager.column_category = Category
 gui.config.packagemanager.column_info = Info.
 gui.config.packagemanager.column_installedversion = Inst. Version
@@ -242,12 +250,9 @@ gui.config.plugin.host.btn_load = Load Plugin
 gui.config.plugin.host.desc = Attention!!\r\nThe jD Team takes no responsibility for compliance with host TOS's. \r\nPlease read the TOS and activate the plugin only\r\nif you accept them!\r\nThe order of the plugins definies the Priority of the automatic mirror selection.\n\rPreferred plugins should be on top!
 gui.config.plugin.host.name = Host plugins
 gui.config.plugin.host.readagb = Read TOS
-gui.config.plugin.optional.btn_togglestatus = On/Off
 gui.config.plugin.optional.forcedactive = The addon %s cannot be disabled.
 gui.config.plugin.optional.link_help = http://www.wiki.jdownloader.org/index.php?title=Uninstalling_Add-ons
 gui.config.plugin.optional.linktext_help = Help
-gui.config.plugin.optional.statusactive = On
-gui.config.plugin.optional.statusinactive = Off
 gui.config.popup.title = Configuration
 gui.config.reconnect.name = Reconnect
 gui.config.reloadcontainer = Reload Download Container
@@ -313,6 +318,7 @@ gui.downloadlist.delete = Delete selected links ?
 gui.downloadlist.delete_downloadlinks = Remove completed downloads?
 gui.downloadlist.delete_packages = Remove completed packages?
 gui.downloadlist.reset = Reset selected downloads? (Attention: File(s) will be deleted!)
+gui.downloadlist.tooltip.connection = Chunk
 gui.downloadlist.tooltip.connections = Act. connections:
 gui.downloadlist.tooltip.partnum = Parts:
 gui.downloadlist.tooltip.partsactive = Active:
@@ -715,6 +721,8 @@ interaction.trigger.package_finished = Package finished
 interaction.trigger.package_finished.desc = Executed after a package got finished
 interaction.trigger.single_download_failed = Download failed
 interaction.trigger.single_download_failed.desc = Executed after a download failed
+jd.plugins.decrypt.bestmovies.captchainputwrong = Wrong Input, please enter time like this: 4:30
+jdownloader.localnewsurl = http://jdownloader.org/news?lng=en
 jdownloader.org = jDownloader.org
 linkinformation.available.error = Error!
 linkinformation.download.aborted = Aborted
@@ -759,6 +767,9 @@ modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = External
 modules.reconnect.types.liveheader = LiveHeader/Curl
 plugin.optional.jdchat.teamviewer.yourtvdata = Your Teamviewer logins:
+plugin.rapidshare.error.accountnotfound = Your Premium Account has not been found.
+plugin.rapidshare.error.fraud = Fraud detected: This Account has been illegally used by several users.
+plugin.rapidshare.error.limitexeeded = You have exceeded the download limit.
 plugin.rapidshare.tickettime = Wait %s min. for ticket
 plugin.serienjunkies.archiveincomplete = Archiv not complete or not online
 plugin.serienjunkies.pageerror = No Links from SJ
@@ -795,14 +806,13 @@ plugins.errors.error = Error:
 plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
+plugins.host.dosyakaydet.breakcaptcha = Waiting for OCR
 plugins.host.enterlinkpassword = Please enter Linkpassword
 plugins.host.fastload.browsererror = Could not open the Link in Browser
 plugins.host.fastload.errors = Browserlauncher missconfigured
 plugins.host.fastload.info = You try to download for the very first time from fast-load.net.\r\nThis plugin has some specials: To download you have to enter a captcha in browser.\r\nJD will now open an info URL
+plugins.host.fastload.infourl = http://wiki.jdownloader.org?title=Fast-load.net
 plugins.host.fastload.prepare = Wait for linkconfirmation
-plugins.host.gigasize.freeaccount.pass = Password
-plugins.host.gigasize.freeaccount.use = Use Free account
-plugins.host.gigasize.freeaccount.user = Email
 plugins.host.meinupload.serverdefect = Service not available
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = The %s plugin does not support the Accountinfo feature yet.
@@ -855,7 +865,6 @@ plugins.optional.hjsplit.menu.config = Settings
 plugins.optional.hjsplit.menu.extract.singlefils = Merge archive(s)
 plugins.optional.hjsplit.menu.toggle = Activate
 plugins.optional.httpliveheaderscripter.action.end = Exit Scripter
-plugins.optional.httpliveheaderscripter.action.start = Start Scripter
 plugins.optional.httpliveheaderscripter.gui.desc = XML-File
 plugins.optional.httpliveheaderscripter.gui.importff.message = Insert your firefox Liveaheader Log here
 plugins.optional.httpliveheaderscripter.gui.importff.title = Import Firefox Live header Log
@@ -937,7 +946,6 @@ plugins.optional.langfileeditor.close = Close
 plugins.optional.langfileeditor.colorizedone = Colorize Done Entries
 plugins.optional.langfileeditor.colorizemissing = Colorize Missing Entries
 plugins.optional.langfileeditor.colorizeold = Colorize Old Entries
-plugins.optional.langfileeditor.continuesearch = Continue Search
 plugins.optional.langfileeditor.deletekeys = Delete Key(s)
 plugins.optional.langfileeditor.duplicatedentries = Duplicated Entries
 plugins.optional.langfileeditor.entries = Entries
@@ -964,14 +972,24 @@ plugins.optional.langfileeditor.save.error.title = Error!
 plugins.optional.langfileeditor.save.success.message = LanguageFile saved successfully!
 plugins.optional.langfileeditor.save.success.title = Save successful!
 plugins.optional.langfileeditor.saveas = Save As
-plugins.optional.langfileeditor.search = Search
-plugins.optional.langfileeditor.searchfor = String to search for: (Startposition is the first selected row)
-plugins.optional.langfileeditor.show_gui = Start Languageeditor
 plugins.optional.langfileeditor.showdupes = Show Dupes
 plugins.optional.langfileeditor.sourcefile = Source File:
 plugins.optional.langfileeditor.sourcefolder = Source Folder: 
 plugins.optional.langfileeditor.sourcevalue = Source Value
 plugins.optional.langfileeditor.string = String
+plugins.optional.langfileeditor.svn = SVN
+plugins.optional.langfileeditor.svn.access.anonymous = Anonymous SVN CheckOut
+plugins.optional.langfileeditor.svn.access.pass = SVN Password
+plugins.optional.langfileeditor.svn.access.user = SVN Username
+plugins.optional.langfileeditor.svn.change.message = Change the current source to the checked out SVN Repository?
+plugins.optional.langfileeditor.svn.change.title = Change now?
+plugins.optional.langfileeditor.svn.checkout = CheckOut SVN now (This may take several seconds ...)
+plugins.optional.langfileeditor.svn.checkoutonstart = CheckOut SVN on start
+plugins.optional.langfileeditor.svn.error.message = An error occured while checking the SVN Repository out! Please check the SVN settings!\n%s
+plugins.optional.langfileeditor.svn.error.title = Error!
+plugins.optional.langfileeditor.svn.repository = SVN Repository
+plugins.optional.langfileeditor.svn.settings = SVN Settings
+plugins.optional.langfileeditor.svn.workingcopy = SVN Working Copy
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
 plugins.optional.langfileeditor.translate = Translate with Google
 plugins.optional.langfileeditor.translate.error.message = The Language Key, you have entered, is not supported by Google!
