--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -23,6 +23,7 @@ addons.schedule.menu.running = Angehalten!
 addons.schedule.menu.schedule = Zeitplaner
 addons.schedule.menu.start = Start
 addons.schedule.menu.start_stop = Start/Stop Download?
+addons.schedule.menu.status = Status
 addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Zeitpunkt wählen:
 addons.schedule.name = Zeitplaner
@@ -75,6 +76,9 @@ downloadlink.status.error.temp_unavailable = Kurzzeitig nicht verfügbar
 downloadlink.status.error_unexpected = Unerwarteter Fehler
 downloadlink.status.incomplete = unvollständig
 downloadlink.status.waitinguserio = Warten auf Benutzer-Eingabe
+exceptions.browserexception.alreadyexists = Zieldatei existiert bereits
+exceptions.browserexception.badrequest = Fehlerhafter Request: %s(%s)
+exceptions.browserexception.couldnotrenam = Konnte Zieldatei nicht umbenennen
 gui.accountcheck.pluginerror = Plugin %s ist möglicherweise kaputt. Bitte Support informieren
 gui.askname = Dein Name?
 gui.btn_add = Hinzufügen
@@ -286,6 +290,8 @@ gui.dialog.about.email = Email
 gui.dialog.about.forum = Support Board
 gui.dialog.about.homepage = Homepage
 gui.dialog.about.jddevteam = JDownloader Entwickler Team
+gui.dialog.about.member = Mitglied
+gui.dialog.about.section = Sektion
 gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_de.html
 gui.dialog.about.title = About JDownloader
 gui.dialog.about.whatisjd = Was ist jDownloader?
@@ -312,6 +318,7 @@ gui.downloadlist.delete = Ausgewählte Links wirklich entfernen?
 gui.downloadlist.delete_downloadlinks = Entferne abgeschlosse Downloads?
 gui.downloadlist.delete_packages = Entferne abgeschlossene Paket?
 gui.downloadlist.reset = Ausgewählten Download zurücksetzen? (Achtung: Datei(en) werden gelöscht!)
+gui.downloadlist.tooltip.connection = Verbindung
 gui.downloadlist.tooltip.connections = Akt. Verbindungen:
 gui.downloadlist.tooltip.partnum = Teile:
 gui.downloadlist.tooltip.partsactive = Gerade aktiv:
@@ -750,6 +757,8 @@ modules.reconnect.types.clr = CLR Script
 modules.reconnect.types.extern = Extern
 modules.reconnect.types.liveheader = LiveHeader/Curl
 plugin.optional.jdchat.teamviewer.yourtvdata = Deine Teamviewer Daten:
+plugin.rapidshare.error.accountnotfound = Premium Account wurde nicht gefunden.
+plugin.rapidshare.error.limitexeeded = Das Downloadlimit wurde erreicht.
 plugin.rapidshare.tickettime = %s auf Ticket warten
 plugin.serienjunkies.archiveincomplete = Archiv nicht komplett
 plugin.serienjunkies.pageerror = SJ liefert keine Downloadlinks
@@ -791,9 +800,6 @@ plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
 plugins.host.fastload.browsererror = Konnte den Link nicht im Browser öffnen!
 plugins.host.fastload.errors = Browser falsch konfiguriert
 plugins.host.fastload.prepare = Warte auf Linkbestätigung
-plugins.host.gigasize.freeaccount.pass = Passwort
-plugins.host.gigasize.freeaccount.use = FreeAccount benutzen
-plugins.host.gigasize.freeaccount.user = eMail
 plugins.host.meinupload.serverdefect = Service nicht verfügbar
 plugins.host.premium.info.cash = Cash
 plugins.host.premium.info.error = Das %s Plugin unterstützt noch keine Accountinformationen.
@@ -927,7 +933,6 @@ plugins.optional.langfileeditor.close = Schliessen
 plugins.optional.langfileeditor.colorizedone = Fertige Einträge einfärben
 plugins.optional.langfileeditor.colorizemissing = Fehlende Einträge einfärben
 plugins.optional.langfileeditor.colorizeold = Alte Einträge einfärben
-plugins.optional.langfileeditor.continuesearch = Weitersuchen
 plugins.optional.langfileeditor.deletekeys = Schlüssel löschen
 plugins.optional.langfileeditor.duplicatedentries = Doppelte Einträge
 plugins.optional.langfileeditor.entries = Einträge
@@ -954,13 +959,24 @@ plugins.optional.langfileeditor.save.error.title = Fehler!
 plugins.optional.langfileeditor.save.success.message = LanguageFile erfolgreich gespeichert!
 plugins.optional.langfileeditor.save.success.title = Speichern erfolgreich!
 plugins.optional.langfileeditor.saveas = Speichern Als
-plugins.optional.langfileeditor.search = Suchen
-plugins.optional.langfileeditor.searchfor = Suche nach String: (Startposition ist die erste ausgewählte Zeile)
 plugins.optional.langfileeditor.showdupes = Doppelte Einträge anzeigen
 plugins.optional.langfileeditor.sourcefile = Quelle (Datei):
 plugins.optional.langfileeditor.sourcefolder = Quelle (Ordner):
 plugins.optional.langfileeditor.sourcevalue = Wert von Quelle
 plugins.optional.langfileeditor.string = String
+plugins.optional.langfileeditor.svn = SVN
+plugins.optional.langfileeditor.svn.access.anonymous = Anonymer SVN Zugriff
+plugins.optional.langfileeditor.svn.access.pass = SVN Passwort
+plugins.optional.langfileeditor.svn.access.user = SVN Username
+plugins.optional.langfileeditor.svn.change.message = Momentane Quelle auf das kopierte SVN Repository setzen?
+plugins.optional.langfileeditor.svn.change.title = Quelle wechseln?
+plugins.optional.langfileeditor.svn.checkout = SVN herunterladen (Dauert einige Sekunden ...)
+plugins.optional.langfileeditor.svn.checkoutonstart = SVN beim Start herunterladen
+plugins.optional.langfileeditor.svn.error.message = Ein Fehler trat beim Herunterladen vom SVN auf! Bitte die SVN Einstellungen überprüfen!\n%s
+plugins.optional.langfileeditor.svn.error.title = Fehler!
+plugins.optional.langfileeditor.svn.repository = SVN Repository
+plugins.optional.langfileeditor.svn.settings = SVN Einstellungen
+plugins.optional.langfileeditor.svn.workingcopy = SVN Arbeitskopie
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
 plugins.optional.langfileeditor.translate = Mit Google übersetzen
 plugins.optional.langfileeditor.translate.error.message = Der eingegebene Language Key wird von Google nicht unterstützt!
