Polish translation update - few new strings added.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -497,6 +497,7 @@ gui.config.popup.btn_cancel = Anuluj
 gui.config.popup.btn_ok = OK
 gui.config.popup.title = Konfiguracja
 gui.config.reconnect.name = Rozłączanie
+gui.config.reconnect.showupload = Pokazuj okienko informacyjne o szczegółach rozłączania
 gui.config.reloadcontainer = Odświeżaj listę plików
 gui.config.routeripfinder = Wyszukiwanie IP routera.
 gui.config.routeripfinder.close = Zamknij okno
@@ -599,6 +600,7 @@ gui.downloadlink.errorpostprocess2 = [konwertowanie nie powiodło się]
 gui.downloadlink.finished = [ukończony]
 gui.downloadlink.hosterwaittime = [oczekiwanie na nowe IP]
 gui.downloadlink.offline = [offline]
+gui.downloadlink.plugindisabled = [wtyczka wyłączona]
 gui.downloadlink.status.crcfailed = Suma kontrolna nieprawidłowa.
 gui.downloadlink.status.crcok = Suma kontrolna w porządku.
 gui.downloadlink.status.wait = Oczekiwanie: %s min.
@@ -1750,6 +1752,7 @@ plugins.youtube.convertdialog.mp4 = Video (MP4)
 plugins.youtube.convertdialog.title = Plik YouTube
 routerinfocollector.dialog.msg = <b>By ułatwić automatyczną konfigurację routerów zbieramy informacje o nich!</B> Jeśli zgadzasz się na wysłanie informacji o Twoim routerze na nasz serwer, wybierz TAK!
 routerinfocollector.dialog.title = Pomóż w zbieraniu informacji o routerach
+routerinfocollector.namedialog.title = Proszę podać następujące informacje: producent, model, firmware. (np. DLink, 635 , FW1.37)
 showcaptcha.choose.file = Wybierz pliku obrazka
 showcaptcha.chooser.title = JDownloader - Kod Captcha
 sys.ask.rlyclose = Czy na pewno chcesz zamknąć JDownloadera?
