--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -4,7 +4,7 @@ addons.jdgrowlnotification.menu = Growl mesajları
 addons.jdgrowlnotification.menu.enable = Mesajları etkinleştir
 addons.jdlowspeed.statusmessage.disabled = Devredışı bırak
 addons.jdlowspeed.statusmessage.enabled = Etkinleştir
-addons.jdshutdown.menu = İndirmeden sonra sistemi kapat
+addons.jdshutdown.menu = JD-Sistem Kapatma
 addons.jdshutdown.menu.disable = Devredışı bırak
 addons.jdshutdown.menu.enable = Etkinleştir
 addons.jdshutdown.run = sistemi şimdi kapat
@@ -371,9 +371,9 @@ gui.javacheck.html = <link href='http://jdownloader.org/jdcss.css' rel='styleshe
 gui.javacheck.title = Yanlış Java sürümü
 gui.linkgrabber.bar.title = Bilgi Toplayıcı
 gui.linkgrabber.btn.accept = Paketi Ekle
-gui.linkgrabber.btn.acceptall = Paket(leri) Ekle
+gui.linkgrabber.btn.acceptall = Tümünü Ekle
 gui.linkgrabber.btn.sortpackages = Paketleri sırala
-gui.linkgrabber.cmb.insertatposition = Buraya yerleştir:
+gui.linkgrabber.cmb.insertatposition = Buraya Yerleştir:
 gui.linkgrabber.lbl.isoffline = [Çevirimdışı]
 gui.linkgrabber.lbl.isonline = [Çevirimiçi]
 gui.linkgrabber.lbl.newpackage = Yeni paket
@@ -386,13 +386,13 @@ gui.linkgrabber.menu.edit.removeofflineall = Bozuk linklerin tümünü kaldır
 gui.linkgrabber.menu.edit.removepackage = Paketi kaldır
 gui.linkgrabber.menu.edit.splitbyhost = Paketleri barındırıcıya göre böl
 gui.linkgrabber.menu.extras = Ekstralar
-gui.linkgrabber.menu.extras.autopackage = Otomatik Paket
-gui.linkgrabber.menu.extras.startafteradding = Eklendikten sonra indirmeyi başlat
+gui.linkgrabber.menu.extras.autopackage = Otomatik Paketler
+gui.linkgrabber.menu.extras.startafteradding = Ekledikten sonra indirmeye başla
 gui.linkgrabber.menu.hostselection = Barındırıcı seçimi
 gui.linkgrabber.menu.hostselectionmore = Daha fazla barındırıcı
 gui.linkgrabber.menu.hostselectionpackageonly = Sadece yürülükteki paket
 gui.linkgrabber.menu.hostselectionremove = Geri kalan linkleri kaldır
-gui.linkgrabber.menu.selection = Link yönetimi
+gui.linkgrabber.menu.selection = Link Yönetimi
 gui.linkgrabber.menu.selection.free = Serbest
 gui.linkgrabber.menu.selection.mirror = Aynalink seçimi
 gui.linkgrabber.menu.selection.premium = Premium
@@ -586,7 +586,7 @@ gui.messages.outofmemoryerror = Bir hata algılandı!\r\njDownloader için yeter
 gui.packageinfo.comment = Açıklama
 gui.packageinfo.dldirectory = İndirme klasörü
 gui.packageinfo.links = Linkler (dosyalarınız)
-gui.packageinfo.loaded = Yüklendi
+gui.packageinfo.loaded = Yüklenen
 gui.packageinfo.name = Adı
 gui.packageinfo.packagesize = Paket boyutu
 gui.packageinfo.password = Parola
@@ -609,7 +609,7 @@ gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Mak.İnd
 gui.statusbar.speed = Hız
 gui.support.forumurl = http://www.the-lounge.org/viewforum.php?f=291
-gui.support.wikiurl = http://wiki.jdownloader.org/index.php?title=JDownloader_Wiki:Portal_English
+gui.support.wikiurl = http://wiki.jdownloader.org/index.php?title=Kategorie:Turkish_Wiki
 gui.tab.plugin_activity.column_plugin = Modül
 gui.tab.plugin_activity.column_progress = İlerleme
 gui.table.contextmenu.browselink = Tarayıcı'da Aç
@@ -819,7 +819,7 @@ modules.unrar.enabled.instanthelp = http://ns2.km32221.keymachine.de/jdownloader
 plugin.optional.jdchat.teamviewer.yourtvdata = Teamviewer verileriniz::
 plugin.rapidshare.error.accountnotfound = Premium hesabınız bulunamadı.
 plugin.rapidshare.error.fraud = Sahtekarlık saptandı: Bu hesap başkaları tarafından yasal olmadan kullanılmış.
-plugin.rapidshare.error.limitexeeded = İndirme limitini aştınız.
+plugin.rapidshare.error.limitexeeded = İndirme limitinizi aştınız.
 plugin.rapidshare.tickettime = Bilet için %s bekle
 plugin.serienjunkies.archiveincomplete = Arşiv tam değil
 plugin.serienjunkies.pageerror = SJ indirme linklerini sağlamıyor
@@ -875,14 +875,14 @@ plugins.host.httpallgemein.disable = Takmabirimi devredışı bırak
 plugins.host.meinupload.serverdefect = Servis mevcut değil
 plugins.host.premium.info.cash = Para
 plugins.host.premium.info.error = %s takmabirimi , hesap bilgileri özelliğini şimdilik desteklemiyor.
-plugins.host.premium.info.files = Dosyalar
+plugins.host.premium.info.files = Yüklenen Dosyalar
 plugins.host.premium.info.notvalid = '%s'  için olan üyelik geçerli değil! Lütfen kullanıcı adinızı kontrol edin!\r\n%s
 plugins.host.premium.info.premiumpoints = Premium Puanlar
 plugins.host.premium.info.status = Durum
 plugins.host.premium.info.title = %s Hesabının %s Bilgileri
-plugins.host.premium.info.trafficleft = Kalan kota
-plugins.host.premium.info.trafficshareleft = Kalan kota paylaşımı
-plugins.host.premium.info.usedspace = Kullanılan alan
+plugins.host.premium.info.trafficleft = Kalan Kota
+plugins.host.premium.info.trafficshareleft = Kalan Kota Paylaşımı
+plugins.host.premium.info.usedspace = Kullanılan Alan
 plugins.host.premium.info.validuntil = Bu tarihe kadar geçerli
 plugins.host.rapidshare.errors.0b37866ecbc00ce1857fa40852df6fef = İndirme oturum süresi eskidi. Tekrar deneyin
 plugins.host.rapidshare.errors.33f66fa600e57edd85714127295c7bcc = Dosya bulunamadı. İndrime linkini kontrol edin.
@@ -1080,7 +1080,7 @@ plugins.optional.newsfeeds.addfeeddialogtitle = Besleme Ekle
 plugins.optional.newsfeeds.downloadselected = Seçileni İndir
 plugins.optional.newsfeeds.getlatestsubscribeddownloads = En son abone olunan indirmeleri al
 plugins.optional.newsfeeds.loading = Yükleniyor...
-plugins.optional.newsfeeds.managedownloadsubscriptions = Abone olunan indirmeleri düzenle
+plugins.optional.newsfeeds.managedownloadsubscriptions = İndirme aboneliklerini yönet
 plugins.optional.newsfeeds.managefeeds = Beslemeleri Yönet
 plugins.optional.newsfeeds.nowsubscribedfound = Abone olunan hiçbir indirme bulunamadı.
 plugins.optional.newsfeeds.pleaseaddfeed = Lütfen Beslemeleri Ekleyin.
@@ -1105,7 +1105,7 @@ plugins.optional.remotecontrol.name = Uzaktan Kumanda
 plugins.optional.remotecontrol.port = Port:
 plugins.optional.remotecontrol.startedonport = Bu Port'da başladı
 plugins.optional.remotecontrol.stopped = Durduruldu.
-plugins.optional.remotecontrol.toggle = Başlat/Durdur
+plugins.optional.remotecontrol.toggle = Uzaktan Kumanda Başlat/Durdur
 plugins.optional.streamsharingtool.action.end = Çıkış
 plugins.optional.streamsharingtool.action.save.dlc.finished = StreamingShare DLC kullanıma hazır!
 plugins.optional.streamsharingtool.action.start = StreamSharing aracını başlat
@@ -1212,8 +1212,8 @@ system.download.triggerfileexists.skip = Atla
 system.update.changelogurl = http://jdownloader.org/changes?toolmode=1
 system.update.error.message = Bu paketler için güncelleme başarısız :
 system.update.error.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
-system.update.message.title = Bu sürüme güncelle %s
-system.update.showchangelog = Değişikliklerin Tümünü Göster
+system.update.message.title = Bu sürüme güncellenmiş %s
+system.update.showchangelog = Tüm değişiklikler
 system.update.success.message = Yeni güncellemeler yüklendi<hr>%s
 system.update.success.message.infolink = %s v.%s <a href='%s'>INFO</a><br/>
 train.choose.folder = Klasör seç
